--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chalk": "^4.1.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "formik": "^2.2.9",
     "joi": "^17.6.0",
     "mongoose": "^6.4.2",
     "nodemon": "^2.0.18",
